--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -265,186 +265,211 @@
 					</div>
 				</div>
 				<!-- end sCard-->
-				<div class="container">
-					<div class="dd-group dd-group-js">
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+				<div class="dd-group dd-group-js">
+					<div class="dd-group__item">
+						<div class="dd-group__head dd-head-js">
+							<div class="container">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Ситуация</h4>
-											<p>Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  </p>
 										</div>
 									</div>
 									<div class="col-auto">
-										<button></button>
+										<button class="dd-group__button dd-group__button--js">
+										</button>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+						<div class="dd-group__content dd-content-js">
+							<div class="container">
+								<div class="dd-group__first-content">
+									<p>Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  </p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="dd-group__item">
+						<div class="dd-group__head dd-head-js">
+							<div class="container">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Задача</h4>
-											<p>Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать</p>
 										</div>
 									</div>
 									<div class="col-auto">
-										<button></button>
+										<button class="dd-group__button dd-group__button--js">
+										</button>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+						<div class="dd-group__content dd-content-js">
+							<div class="container">
+								<div class="dd-group__first-content">
+									<p>Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="dd-group__item">
+						<div class="dd-group__head dd-head-js">
+							<div class="container">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Решение</h4>
-											<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
 										</div>
 									</div>
 									<div class="col-auto">
-										<button></button>
+										<button class="dd-group__button dd-group__button--js">
+										</button>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<!-- start sCard-->
-				<div class="sCard section">
-					<div class="container-wide">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="sCard__slider sCard__slider--js swiper">
-									<div class="swiper-wrapper">
-										<div class="sCard__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
+						<div class="dd-group__content dd-content-js">
+							<div class="container">
+								<div class="dd-group__first-content">
+									<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
+								</div>
+							</div>
+							<!-- start sCard-->
+							<div class="sCard section">
+								<div class="container-wide">
+									<div class="row">
+										<div class="col-md-12">
+											<div class="sCard__slider sCard__slider--js swiper">
+												<div class="swiper-wrapper">
+													<div class="sCard__slide swiper-slide">
+														<!-- picture-->
+														<picture> 
+															<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
+															<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
+															<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
+															<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
+															<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
+															<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
+														</picture>
+														<!-- /picture-->
+													</div>
+													<div class="sCard__slide swiper-slide">
+														<!-- picture-->
+														<picture> 
+															<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
+															<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
+															<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
+															<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
+															<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
+															<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
+														</picture>
+														<!-- /picture-->
+													</div>
+													<div class="sCard__slide swiper-slide">
+														<!-- picture-->
+														<picture> 
+															<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
+															<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
+															<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
+															<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
+															<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
+															<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
+														</picture>
+														<!-- /picture-->
+													</div>
+												</div>
+												<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+													<svg class="icon icon-chevron-left-btn ">
+														<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+													</svg>
+												</div>
+												<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+													<svg class="icon icon-chevron-right-btn ">
+														<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+													</svg>
+												</div>
+												<div class="swiper-pagination d-lg-none"></div>
+											</div>
 										</div>
-										<div class="sCard__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
+									</div>
+								</div>
+							</div>
+							<!-- end sCard-->
+							<div class="sContent section">
+								<div class="container">
+									<p>Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. <a href="#">Donec non purus</a> venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+									<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+									<div class="author-block">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/cite-photo.webp"/><img src="img/@2x/cite-photo.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+										<figcaption>Даша Данилычева <br>
+											<cite>Дизайнер проекта</cite>
+										</figcaption>
+									</div>
+								</div>
+							</div>
+							<!-- start sVideo-->
+							<div class="sVideo section" id="sVideo">
+								<div class="container-wide">
+									<div class="video-wrrpaer mt-0">
+										<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+									</div>
+								</div>
+							</div>
+							<!-- end sVideo-->
+							<div class="sContent section pb-0">
+								<div class="container">
+									<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
+									<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.</p>
+								</div>
+							</div>
+							<!-- start sCard-->
+							<div class="sCard section">
+								<div class="container-wide">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="cardWrrap">
+												<div class="cardWrrap__content">
+												</div>
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div>
 										</div>
-										<div class="sCard__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/card-bg-6.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/card-bg-6.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/card-bg-6.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/card-bg-6.jpg"/><img src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
+										<div class="col-md-6"> 
+											<div class="cardWrrap">
+												<div class="cardWrrap__content">
+												</div>
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/card-bg-10.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/card-bg-10.webp"/><img class="object-fit-js" src="img/@2x/card-bg-10.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div>
 										</div>
 									</div>
-									<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
-										<svg class="icon icon-chevron-left-btn ">
-											<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
-										</svg>
+								</div>
+							</div>
+							<!-- end sCard-->
+							<div class="sServiceHead sServiceHead--for-what section pt-0">
+								<div class="container">
+									<div class="col-12">
+										<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
+										</p>
 									</div>
-									<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
-										<svg class="icon icon-chevron-right-btn ">
-											<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
-										</svg>
-									</div>
-									<div class="swiper-pagination d-lg-none"></div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<!-- end sCard-->
-			</div>
-			<div class="sContent section">
-				<div class="container">
-					<p>Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. <a href="#">Donec non purus</a> venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-					<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
-					<div class="author-block">
-						<!-- picture-->
-						<picture> 
-							<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
-							<source type="image/webp" srcset="img/@2x/webp/cite-photo.webp"/><img src="img/@2x/cite-photo.jpg" alt="" loading="lazy"/>
-						</picture>
-						<!-- /picture-->
-						<figcaption>Даша Данилычева <br>
-							<cite>Дизайнер проекта</cite>
-						</figcaption>
-					</div>
-				</div>
-			</div>
-			<!-- start sVideo-->
-			<div class="sVideo section" id="sVideo">
-				<div class="container-wide">
-					<div class="video-wrrpaer mt-0">
-						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-					</div>
-				</div>
-			</div>
-			<!-- end sVideo-->
-			<div class="sContent section pb-0">
-				<div class="container">
-					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
-					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.</p>
-				</div>
-			</div>
-			<!-- start sCard-->
-			<div class="sCard section">
-				<div class="container-wide">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="cardWrrap">
-								<div class="cardWrrap__content">
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6"> 
-							<div class="cardWrrap">
-								<div class="cardWrrap__content">
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-10.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-10.webp"/><img class="object-fit-js" src="img/@2x/card-bg-10.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- end sCard-->
-			<div class="sServiceHead sServiceHead--for-what section pt-0">
-				<div class="container">
-					<div class="col-12">
-						<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
-						</p>
 					</div>
 				</div>
 			</div>
