--- a/public/14-search-4.html
+++ b/public/14-search-4.html
@@ -172,19 +172,26 @@
 					<div class="dd-group dd-group-js">
 						<div class="dd-group__item active">
 							<div class="dd-group__head">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Продвижение</h4>
-											<p>Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
+								<div class="container">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Продвижение</h4>
+											</div>
 										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
+										<div class="col-auto">
+											<button class="dd-group__button dd-group__button--js">
+											</button>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="dd-group__content dd-content-js active">
+								<div class="container">
+									<div class="dd-group__first-content">
+										<p>Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
+									</div>
+								</div>
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
@@ -203,19 +210,26 @@
 						</div>
 						<div class="dd-group__item active">
 							<div class="dd-group__head">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Потребительский брендинг</h4>
-											<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем.</p>
+								<div class="container">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Потребительский брендинг</h4>
+											</div>
 										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
+										<div class="col-auto">
+											<button class="dd-group__button dd-group__button--js">
+											</button>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="dd-group__content dd-content-js active">
+								<div class="container">
+									<div class="dd-group__first-content">
+										<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем.</p>
+									</div>
+								</div>
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
@@ -234,19 +248,26 @@
 						</div>
 						<div class="dd-group__item active">
 							<div class="dd-group__head">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Стратегия</h4>
-											<p>Мы уверены, что именно смысл является истинным преимуществом сильного бренда.  Наш подход обеспечивает взаимопонимание между бизнесом и потребителем.  </p>
+								<div class="container">
+									<div class="dd-group__row row">
+										<div class="col">
+											<div class="dd-group__wrraper">
+												<h4>Стратегия</h4>
+											</div>
 										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
+										<div class="col-auto">
+											<button class="dd-group__button dd-group__button--js">
+											</button>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="dd-group__content dd-content-js active">
+								<div class="container">
+									<div class="dd-group__first-content">
+										<p>Мы уверены, что именно смысл является истинным преимуществом сильного бренда.  Наш подход обеспечивает взаимопонимание между бизнесом и потребителем.  </p>
+									</div>
+								</div>
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
