--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -176,19 +176,26 @@
 							<div class="dd-group dd-group-js">
 								<div class="dd-group__item dd-group__item--service">
 									<div class="dd-group__head dd-head-js">
-										<div class="dd-group__row row">
-											<div class="col">
-												<div class="dd-group__wrraper">
-													<h4>Стратегия</h4>
-													<p><span class="text-gr">Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</span></p>
+										<div class="container">
+											<div class="dd-group__row row">
+												<div class="col">
+													<div class="dd-group__wrraper">
+														<h4>Стратегия</h4>
+													</div>
 												</div>
-											</div>
-											<div class="col-auto">
-												<button></button>
+												<div class="col-auto">
+													<button class="dd-group__button dd-group__button--js">
+													</button>
+												</div>
 											</div>
 										</div>
 									</div>
 									<div class="dd-group__content dd-content-js">
+										<div class="container">
+											<div class="dd-group__first-content">
+												<p><span class="text-gr">Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</span></p>
+											</div>
+										</div>
 										<div class="content-wrrap"> 
 											<div class="row">
 												<div class="col-lg-6"> 
