--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -336,6 +336,20 @@
 									<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
 								</div>
 							</div>
+							<div class="sContent section">
+								<div class="container">
+									<ol>
+										<li>Nam luctus orci non suscipit mollis</li>
+										<li>Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
+											<ol>
+												<li>Donec scelerisque massa nec sapien tempus consectetur</li>
+												<li>Morbi vehicula mauris neque</li>
+											</ol>
+										</li>
+										<li>Quisque aliquet nibh nec egestas faucibus</li>
+									</ol>
+								</div>
+							</div>
 							<!-- start sCard-->
 							<div class="sCard section">
 								<div class="container-wide">
