--- a/public/index.html
+++ b/public/index.html
@@ -228,19 +228,19 @@
 							</p>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span class="number-js" data-number="5768">0</span><span>выполненных проектов</span>
+							<div class="services-goods"><span class="number-js number-4" data-number="5768">0</span><span>выполненных проектов</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span class="number-js" data-number="668">0</span><span>довольных клиентов</span>
+							<div class="services-goods"><span class="number-js number-4" data-number="4000">0</span><span>довольных клиентов</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span class="number-js" data-number="34">0</span><span>светлейших головы</span>
+							<div class="services-goods"><span class="number-js number-3" data-number="900">0</span><span>светлейших головы</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods services-goods--indent"><span class="number-js" data-number="65">0</span><span>наград за&nbsp;проекты</span>
+							<div class="services-goods services-goods--indent"><span class="number-js number-2" data-number="90">0</span><span>наград за&nbsp;проекты</span>
 							</div>
 						</div>
 					</div>
