--- a/public/08-portfolio.html
+++ b/public/08-portfolio.html
@@ -214,6 +214,7 @@
 									</svg>
 								</button>
 								<div class="dropdown-menu" id="dropdown-menu">
+									<div class="dropdown-item active">Все отрасли</div>
 									<div class="dropdown-item">Напитки</div>
 									<div class="dropdown-item">Мясные продукты</div>
 									<div class="dropdown-item">Молочные и НЕмолочные продукты</div>
@@ -293,6 +294,7 @@
 									</svg>
 								</button>
 								<div class="dropdown-menu" id="dropdown-menu">
+									<div class="dropdown-item active">Все отрасли</div>
 									<div class="dropdown-item">Напитки</div>
 									<div class="dropdown-item">Мясные продукты</div>
 									<div class="dropdown-item">Молочные и НЕмолочные продукты</div>
